# css-handwritten-digit-recognition

./: .gitignore  README.md  _functions.scss  deno.json  index.html  index.tsx  main.py  main.scss  mnist_model_weights.json  mnist_weights.json  model.css  pyproject.toml
.zed/: settings.json
